# codex-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-feature.yml
dev/codex-mcp-server/: devcontainer-feature.json  install.sh
docs/: codex_source_notes.md  mcp_client_config.md  prompt_assembly.md  tool_matrix.md
prompts/: codex_mcp_client_system_prompt.md
scripts/: devcontainer-post-start.sh
src/codex_mcp_server/: __init__.py  patch.py  server.py  shell.py  state.py  tools.py
tests/: test_patch.py  test_tools.py
