[project]
name = "codex-mcp-server"
version = "0.1.0"
description = "A Python MCP server that mirrors locally executable Codex CLI tools."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-mcp-server = "codex_mcp_server.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
